2023-09-23T16:10:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284714929 # 1187
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 631 998 / 647 1020
* notice: next accum: outdated-unq outdated-all / unq all: 633 1001 / 647 1020
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-09] / []

2023-09-23T08:10:34Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6282561625 # 1186
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 631 998 / 646 1019
* notice: next accum: outdated-unq outdated-all / unq all: 631 998 / 647 1020
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-23]

2023-09-23T00:39:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6280477000 # 1185
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 631 998 / 646 1018
* notice: next accum: outdated-unq outdated-all / unq all: 631 998 / 646 1019
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -2 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-09-09 2023-09-22]

2023-09-22T16:11:25Z: