@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-23T16:10:05Z",
+  "timestamp" : "2023-09-24T00:43:27Z",
   "count_outdated" : 1001,
   "uniques_outdated" : 633,
-  "count" : 1020,
+  "count" : 1021,
   "uniques" : 647,
   "clones" : [
     {
@@ -88,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
