@@ -1,3 +1,12 @@
+2023-09-24T00:43:27Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6286954589 # 1188
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-24
+* notice: last 14d: unq all: 3 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 633 1001 / 647 1020
+* notice: next accum: outdated-unq outdated-all / unq all: 633 1001 / 647 1021
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-09-23]
+
 2023-09-23T16:10:05Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6284714929 # 1187
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-23
